[package]
name = "d3ne"
version = "0.7.5"
authors = ["lemonxah <lemon.xah@gmail.com>"]
edition = "2021"
description = "Rust D3 Node Engine implementation that works with retejs, still a work in progress"
license = "Apache-2.0"
homepage = "https://github.com/lemonxah/d3ne-rs"
documentation = "https://docs.rs/d3ne/"
repository = "https://github.com/lemonxah/d3ne-rs"

[dependencies]
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.54"
thiserror = "1.0.31"
